# FedSAM3D

./: README.md  environment.yml  pyproject.toml  requirements.txt
ablations/: README.md
configs/: default.yaml  federated_5clients.yaml
configs/ablations/: no_apg.yaml  no_depth_adapter.yaml  no_gkd.yaml  no_pkd.yaml
fedsam3d/data/: __init__.py  label_maps.py  loaders.py  splits.py  transforms.py
fedsam3d/engine/: __init__.py  evaluator.py  utils.py
fedsam3d/federated/: __init__.py  aggregation.py  client.py  peer_experts.py  server.py
fedsam3d/losses/: __init__.py  distillation.py  masked_loss.py  prompt_regularization.py
fedsam3d/metrics/: __init__.py  segmentation_metrics.py
fedsam3d/models/: __init__.py  adapters.py  apg.py  backbone_sam3d.py  decoder.py  experts.py  fedsam3d.py
scripts/: download_datasets.sh  evaluate.py  export_model.py  preprocess_all.sh  run_federated.py
